--- a/VocaDBRankings/Resources/Template.cshtml
+++ b/VocaDBRankings/Resources/Template.cshtml
@@ -88,7 +88,7 @@
 			</div>
 		</div>
 
-		<small>Generated on <span id="generatedAt"></span> based on <a href="http://vocadb.net">VocaDB</a>.</small>
+		<small>Generated on @System.DateTime.UtcNow.ToString("g") GMT based on <a href="http://vocadb.net">VocaDB</a>.</small>
 	</div>
 </body>
 </html>
