--- a/VocaDBRankings/Resources/Template.cshtml
+++ b/VocaDBRankings/Resources/Template.cshtml
@@ -27,7 +27,7 @@
 						@foreach (SongForApiContract song in Model.TopRatedSongs) {
 							<tr>
 								<td width="30px">
-									<h1>@(System.Array.IndexOf(Model.TopRatedSongs, song) + 1)</h1>
+									<h1>@Model.GetSongPosition(song)</h1>
 								</td>
 								<td width="140px">
 									<a href="http://vocadb.net/S/@song.Id">
@@ -64,7 +64,7 @@
 						@foreach (SongForApiContract song in Model.OtherSongs) {
 						<tr>
 							<td width="30px">
-								<h2>@(System.Array.IndexOf(Model.OtherSongs, song) + 4)</h2>
+								<h2>@Model.GetSongPosition(song)</h2>
 							</td>
 							<td width="80px">
 								<a href="http://vocadb.net/S/@song.Id">
