added begin and end date to document

--- a/VocaDBRankings/Resources/Template.cshtml
+++ b/VocaDBRankings/Resources/Template.cshtml
@@ -17,7 +17,7 @@
 <body>
 	<div class="container">
 		<h2>
-			Vocaloid/UTAU rankings for week @Model.WeekNumber
+			Vocaloid/UTAU rankings for week @Model.WeekNumber (@Model.BeginDate.ToShortDateString() - @Model.EndDate.ToShortDateString())
 		</h2>
 
 		<div class="row">
