add twitter card

--- a/VocaDBRankings/Resources/Template.cshtml
+++ b/VocaDBRankings/Resources/Template.cshtml
@@ -13,6 +13,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="content/vocarankings.css" />
 	<link rel="shortcut icon" href="content/favicon.ico" type="image/x-icon" />
+	
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@("@vocadb")" />
+	<meta name="twitter:title" content="Vocaloid/UTAU rankings for week @Model.WeekNumber" />
+	<meta name="twitter:description" content="Weekly rankings by VocaDB" />
+	<meta name="twitter:image" content="http://static.vocadb.net/img/2jfnf9x.png" />
 </head>
 <body>
 	<div class="container">
