for weekly rankings, show title as date range + week

--- a/VocaDBRankings/Resources/Template.cshtml
+++ b/VocaDBRankings/Resources/Template.cshtml
@@ -3,8 +3,9 @@
 @inherits RazorEngine.Templating.TemplateBase<VocaDBRankings.ViewModels.TemplateViewModel>
 
 @{
-	string durationName = Model.Monthly ? Model.WeekOrMonthNumber : "week " + Model.WeekOrMonthNumber;
 	string durationRankings = Model.Monthly ? "Monthly" : "Weekly";
+	string dateRange = Model.BeginDate.ToShortDateString() + " - " + Model.EndDate.ToShortDateString();
+	string durationString = Model.Monthly ? Model.WeekOrMonthNumber + " (" + dateRange + ")" : dateRange + " (week " + Model.WeekOrMonthNumber + ")";
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="@durationRankings Vocaloid/UTAU rankings generated from VocaDB" />
-	<title>Vocaloid/UTAU rankings for @durationName</title>
+	<title>Vocaloid/UTAU rankings for @durationString</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="content/vocarankings.css" />
@@ -21,7 +22,7 @@
 	
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@("@vocadb")" />
-	<meta name="twitter:title" content="Vocaloid/UTAU rankings for @durationName" />
+	<meta name="twitter:title" content="Vocaloid/UTAU rankings for @durationString" />
 	<meta name="twitter:description" content="@durationRankings rankings by VocaDB" />
 	<meta name="twitter:image" content="http://static.vocadb.net/img/2jfnf9x.png" />
 </head>
@@ -35,7 +36,7 @@
 				</div>
 				<div class="pull-left">
 					<h2>
-						<i>Vocaloid/UTAU rankings for @durationName (@Model.BeginDate.ToShortDateString() - @Model.EndDate.ToShortDateString())</i>
+						<i>Vocaloid/UTAU rankings for @durationString</i>
 					</h2>
 				</div>
 			</div>
